First version of a ui test plugin